--- a/_posts/2021/2021-02-04-cypress.md
+++ b/_posts/2021/2021-02-04-cypress.md
@@ -6,22 +6,22 @@ header_image: public/quality-assurance.jpg
 header_position: bottom
 header_overlay: true
 category: methods-and-tools
-tags: ["cypress", "quality assurance", "tool"]
+tags: ["cypress", "qa", "tools"]
 authors: ["Shohidur"]
 about_authors: ["sshaju"]
 ---
-A part of the job as a Quality Assurance Engineer it is to ensure the quality of the software.
-In 2020 we were looking for a Quality Assurance (QA) tool to test our frontend.
-After one of our QA Engineers at ePages made a research on QA tools, we decided to use Cypress for testing the frontend of our ePages user interface.
-Of course, there are also other tools, such as the [Selenium Framework](https://www.selenium.dev/){:target="_blank"} to test for the ePages UI, but Cypress offers more advantages in testing and it has many features that help us in testing.
-I will go into this in more detail in the next paragraphs.
+One part of the job as a Quality Assurance Engineer is to ensure the quality of the software.
+Last year, ePages decided to introduce a new Quality Assurance (QA) tool to test the frontend.
+After one of our QA Engineers did some research on QA tools, we decided to go with Cypress.
+Of course, there are also other tools, such as the [Selenium Framework](https://www.selenium.dev/){:target="_blank"}, but Cypress offers more advantages for testing and it has many features that help us for our use cases.
+I will go into this in more detail in the next sections.
 
 ## Cypress - our tool of choice
 
-[Cypress](https://www.cypress.io/){:target="_blank"} is a frontend testing tool that can be used to test anything that runs on browsers.
-Cypress allows it that test automation scripts can be written easily in JavaScript which makes the tool developer-friendly.
+[Cypress](https://www.cypress.io/){:target="_blank"} is a frontend testing tool that can be used to test everything that runs in browsers.
+It allows to easily write test automation scripts in JavaScript which makes the tool developer-friendly.
 Furthermore, it makes testing easier because one does not need to install multiple tools to run end-to-end tests.
-All the needed tools are packed in one tool.
+Everything is already combined in that one tool.
 
 At ePages, we are using Cypress for all types of tests, such as:
 
@@ -31,26 +31,54 @@ At ePages, we are using Cypress for all types of tests, such as:
 
 ## Advantages and features of Cypress
 
-- **Time travel**: Screenshots of every command is available on the test runner. It’s easy to see how the commands get executed.
+Let me introduce you to some advantages and features Cypress offers:
 
-- **Automatic waiting**: Cypress waits for assertions and commands to be finished before moving on. A developer does not need to add waiting time for completion of a query.
+- **Time travel**: Screenshots of every command are available in the test runner. It's easy to track how the commands were executed.
 
-- **Real time reloads**: When changes are made on code and saved, Cypress reloads automatically and starts running tests.
+- **Automatic waiting**: Cypress waits for assertions and commands to be finished before moving on. A developer does not need to add a waiting time for completion of a query.
 
-- **Auto scroll**: The automatic scrolling operation ensures that an element is in view before performing any action (e.g. clicking on a button).
+- **Real time reloads**: When changes are made (and saved) on the code base, Cypress automatically reloads and restarts running tests.
 
-- **Debuggability**: The debugging is fast and easy. All the errors and stack traces can be read from browser developer tools which helps to find out why tests are failing.
+- **Auto scroll**: The automatic scrolling operation ensures that an element is in view before performing an action (e.g. clicking on a button).
 
-- **Videos**: Videos of the whole test suite can be viewed when run from Command Line Interface (CLI).
+- **Debuggability**: The debugging is fast and easy. All errors and stack traces can be read in the browser developer tools which helps to find out why tests are failing.
 
-- **Cross browser testing**: Web applications can be tested on different browsers in order to test browser dependability issues.
+- **Videos**: Videos of the whole test suite can be viewed when running them from the Command Line Interface (CLI).
 
-- **Test runs faster**: Cypress runs test as fast as the browser renders the content.
+- **Cross browser testing**: Web applications can be tested in different browsers in order to test browser-specific issues.
+
+- **Test speed**: Cypress runs the tests as fast as the browser renders the content.
+
+Sounds great, doesn't it?
+But there's even more.
+Let me explain some additional features a bit better that are specifically useful for our daily work.
+
+### Retry-ability
+
+One of the core features of Cypress is that failed tests can be retried multiple times.
+By default, this feature is disabled but you can easily enable it in the configuration.
+If a test passes, Cypress will move forward to carry out the remaining tests.
+But if a test fails, Cypress will retry the test again until it reaches the set limit of retries.
+
+Retry-ability can thus reduce the risk of flaky tests failing entire test runs and helps us to get reliable and consistent results.
+
+### TypeScript integration
+
+It is possible to use [TypeScript](https://docs.cypress.io/guides/tooling/typescript-support.html#Install-TypeScript){:target="_blank"} for writing Cypress tests.
+And that's amazing!
+There is only one requirement: TypeScript 3.4 (or higher) must be installed in the project.
+
+### Plugins
+
+The possibility of [plugins](https://docs.cypress.io/plugins/index.html){:target="_blank"} in Cypress provides additional benefits for QA Engineers.
+For example, they can be used to change resolved configuration programmatically, expand functionality, as well as to add new features and commands.
+If you would like to know how to write a plugin, check out the Cypress [API documentation](https://docs.cypress.io/api/plugins/writing-a-plugin.html#Plugins-API){:target="_blank"}.
 
 ## Installing Cypress
 
+Now that you know about WHY we chose Cypress, let's have a look at HOW we are using it.
 The [installation](https://docs.cypress.io/img/snippets/installing-cli.b927778a.mp4){:target="_blank"} of Cypress is easy and fast.
-You only need the following commands for the installation:
+You only need the following commands:
 
 ```
     $ cd /your/project/path
@@ -58,7 +86,7 @@ You only need the following commands for the installation:
     $ npm install Cypress --save-dev
 ```
 
-Cypress can be opened from the project root by the command:
+Cypress can then be opened from the project root with this command:
 
 `$ ./node_modules/.bin/Cypress open`
 
@@ -68,32 +96,11 @@ After running the above command, the Cypress test runner will open.
 
 {% image_custom image="/assets/img/pages/blog/images/cypress-open-project.jpg" width="40" lightbox %}
 
-The files that end with .spec.js extesion are the test suits.
-The drop-down menu on the top-right corner shows the available browser on your computer.
-Any browser can be selected to carry out cross-browser tests.
-
-### Retry-ability
-
-One of the core features of Cypress is that failed tests can be retried multiple times.
-By default, a test does not retry on fail but it can be enabled in configuration to retry the test when failed.
-If a test passes, Cypress will move forward to carry out remaining tests.
-But if the test fails, Cypress will retry the test for another time until it reaches the set limit of retries.
-
-Retry-ability can reduce flaky tests failing entire test runs and thus help us to get reliable and consistent results.
-
-### TypeScript integration
-
-It is possible to use [TypeScript](https://docs.cypress.io/guides/tooling/typescript-support.html#Install-TypeScript){:target="_blank"} for writing Cypress tests.
-And that’s amazing!
-There is only one requirement: TypeScript 3.4+ must be installed in the project to have TypeScript support within Cypress.
-
-### Plugins
-
-The use of [plugins](https://docs.cypress.io/plugins/index.html){:target="_blank"} in Cypress provides additional benefits for QA Engineers.
-This can be used to change resolved configuration programmatically, expand functionality, as well as add new features and commands.
-If you would like to know how to write a plugin, check out the Cypress [API documentation](https://docs.cypress.io/api/plugins/writing-a-plugin.html#Plugins-API){:target="_blank"}.
+The files that end with `.spec.js` are the single test suits.
+The dropdown menu in the top right corner shows the available browsers on your device.
+As written above, any browser can be selected to carry out cross-browser tests.
 
 ## Summary
 
-In this blog post I showed the various advantages and features of Cypress, and gave you a quick introduction on how you can install the tool easily.
-To sum it up, Cypress is a great choice for testers to carry out frontend testing because it is fast, reliable, and full of advantageous features.
+In this blog post, I have shown various advantages and features of Cypress, and gave a quick introduction on how you can install the tool easily.
+To sum it up, Cypress is a great choice for us in terms of frontend testing because it is fast, reliable, and full of advantageous features.
